--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -74,7 +74,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=tokoKita
-main.class=tokokita.TokoKita
+main.class=tampilan.mainMenu
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
